# russian-catalog-localizer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: privacy_or_packaging.yml
.github/workflows/: validate.yml
configs/: localizer.example.toml
docs/: customer-quick-start.zh-CN.md  release-hardening-notes.zh-CN.md  release.md  workflow.md
examples/: glossary.zh-ru.csv  sample_ocr_segments.json
src/russian_catalog_localizer/: __init__.py  __main__.py  cli.py  config.py  desktop_app.py  glossary.py  models.py  ocr.py  packager.py  qa.py  renderer.py  workflow.py
tests/: test_desktop_app.py  test_pipeline.py
tools/: build_windows_package.ps1  desktop_entry.py  run_app.bat
