[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "russian-catalog-localizer"
version = "0.1.0"
description = "Local-first Chinese to Russian catalog localization pipeline skeleton."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Russian Catalog Localizer contributors" }
]
keywords = ["ocr", "catalog", "localization", "russian", "pdf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
ocr = ["pillow>=10.0", "rapidocr-onnxruntime>=1.3"]
pdf = ["pypdf>=4.0", "reportlab>=4.0"]
qa = ["pillow>=10.0"]

[project.scripts]
rcl = "russian_catalog_localizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/russian_catalog_localizer"]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/configs",
  "/docs",
  "/examples",
  "/src",
  "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
